# Terminal3D

./: .gitignore  CMakeLists.txt  README.md  Terminal3DConfig.h.in  main.cpp
GoogleTest/: CMakeLists.txt
GoogleTest/unitTestsSrc/: DataChunkTest.cpp  EntityManagerTest.cpp
Source/: CMakeLists.txt
Source/BuildSystem/CMake/: create_target.cmake  include_generator.cmake  set_platform_dependent_directories.cmake
Source/Config/: CMakeLists.txt
Source/Engine/: CMakeLists.txt
Source/Engine/Core/Private/: GameObject.cpp
Source/Engine/Core/Public/: GameObject.h
Source/Engine/EntryPoint/Private/: Terminal3D.cpp
Source/Engine/Math/Private/: Math.cpp  MatrixTRS.cpp  MatrixTRSOperations.cpp  MatrixVectorOperations.cpp
Source/Engine/Math/Public/: Math.hpp  Matrix.h  MatrixTRS.h  MatrixTRSOperations.cpp  MatrixTRSOperations.h  MatrixVectorOperations.h  Quaternion.h  Vector2.h  Vector3.h
Source/Engine/PlatformDependent/Private/Unix/: ConsoleManager.cpp
Source/Engine/PlatformDependent/Private/Windows/: ConsoleManager.cpp
Source/Engine/PlatformDependent/Public/: ConsoleManager.h
Source/Engine/Rendering/Private/: Camera.cpp  Renderer.cpp
Source/Engine/Rendering/Public/: Camera.h  Renderer.h
Source/Framework/: CMakeLists.txt
Source/Framework/Core/Private/: main.cpp
Source/Sandbox/: CMakeLists.txt
includes/: Terminal3D.h  Terminal3DConfig.h
includes/Terminal3D/: Camera.h  EntityManager.h  GameObject.h  Math.h  Renderer.h  TypeTraits.h
includes/Terminal3D/ECS/: DataChunk.h  ECSCore.h  EntityManager.h
includes/Terminal3D/PlatformDependent/: ConsoleManager.h
src/: Terminal3D.cpp
src/Terminal3D/: Camera.cpp  EntityManager.cpp  GameObject.cpp  Math.cpp  Renderer.cpp
src/Terminal3D/ECS/: EntityManager.cpp
src/Terminal3D/PlatformDependent/Windows/: ConsoleManager.cpp
